--- a/wk_1_basics_n_setup/2_docker_sql/info.ini
+++ b/wk_1_basics_n_setup/2_docker_sql/info.ini
@@ -1,2 +1,7 @@
-[docker]
-db_container_name = wizardly_gauss
+[database]
+container_name = wizardly_gauss
+connection_string = postgresql://root:root@localhost:5432/ny_taxi
+pgcli_python_intepreter = python3
+
+[notebook]
+python_intepreter = python3.10
