save initial scripts to run pg db + pgadmin

--- a/wk_1_basics_n_setup/2_docker_sql/info.ini
+++ b/wk_1_basics_n_setup/2_docker_sql/info.ini
@@ -1,5 +1,6 @@
+; this is a reminder of potential-misleading information during camp
+
 [database]
-container_name = wizardly_gauss
 connection_string = postgresql://root:root@localhost:5432/ny_taxi
 pgcli_python_intepreter = python3
 
