--- a/wk_1_basics_n_setup/2_docker_sql/info.ini
+++ b/wk_1_basics_n_setup/2_docker_sql/info.ini
@@ -1,8 +1,7 @@
 ; this is a reminder of potential-misleading information during camp
 
-[database]
-connection_string = postgresql://root:root@localhost:5432/ny_taxi
-pgcli_python_intepreter = python3
+[pgcli]
+python_intepreter = python3
 
 [notebook]
 python_intepreter = python3.10
