update dockerizing ingest_data.py + execution script

--- a/wk_1_basics_n_setup/2_docker_sql/Dockerfile
+++ b/wk_1_basics_n_setup/2_docker_sql/Dockerfile
@@ -1,8 +1,11 @@
 FROM python:3.9 
 
-RUN pip install pandas
+RUN pip install pandas sqlalchemy psycopg2 pyarrow
 
 WORKDIR /app
-COPY pipeline.py pipeline.py
+COPY ingest_data.py ingest_data.py
 
-ENTRYPOINT ["python", "pipeline.py"]
+# additional layer for storing data
+RUN apt-get install curl && mkdir data
+
+ENTRYPOINT ["python", "ingest_data.py"]
