update ingest_csv_file in compression format

--- a/wk_1_basics_n_setup/2_docker_sql/Dockerfile
+++ b/wk_1_basics_n_setup/2_docker_sql/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9 
 
-RUN pip install pandas sqlalchemy psycopg2
+RUN pip install pandas sqlalchemy psycopg2 pyarrow
 
 WORKDIR /app
 COPY ingest_csv_data.py ingest_data.py
