--- a/wk_1_basics_n_setup/2_docker_sql/Dockerfile
+++ b/wk_1_basics_n_setup/2_docker_sql/Dockerfile
@@ -3,9 +3,9 @@ FROM python:3.9
 RUN pip install pandas sqlalchemy psycopg2 pyarrow
 
 WORKDIR /app
-COPY ingest_data.py ingest_data.py
+COPY ingest_csv_data.py ingest_data.py
 
 # additional layer for storing data
-RUN apt-get install curl && mkdir data
+RUN apt-get install wget && mkdir data
 
 ENTRYPOINT ["python", "ingest_data.py"]
