--- a/wk_2_workflow_orchestration/Dockerfile
+++ b/wk_2_workflow_orchestration/Dockerfile
@@ -5,5 +5,4 @@ COPY docker-requirements.txt .
 RUN pip install -r docker-requirements.txt --trusted-host pypi.python.org --no-cache-dir
 
 COPY flows /opt/prefect/flows
-# COPY data /opt/prefect/data
-RUN mkdir -p /opt/prefect/data
+# !data dirs will be ensured by flow scripts!
