--- a/wk_4_analytics_engineering/dbt_project.yml
+++ b/wk_4_analytics_engineering/dbt_project.yml
@@ -39,3 +39,9 @@ models:
 
 vars:
   payment_type_values: [1, 2, 3, 4, 5, 6]
+
+seeds: 
+    dez_dbt_engineering:
+        taxi_zone_lookup:
+            +column_types:
+                locationid: numeric
